--- a/cs144FinalProject.cbp
+++ b/cs144FinalProject.cbp
@@ -33,9 +33,12 @@
 		</Compiler>
 		<Unit filename="include/Result.h" />
 		<Unit filename="include/Search.h" />
+		<Unit filename="include/User.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="src/Result.cpp" />
 		<Unit filename="src/Search.cpp" />
+		<Unit filename="src/User.cpp" />
+		<Unit filename="src/filepath.txt.txt" />
 		<Extensions>
 			<code_completion />
 			<envvars />
