--- a/cs144FinalProject.cbp
+++ b/cs144FinalProject.cbp
@@ -31,10 +31,12 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="include/PageRank.h" />
 		<Unit filename="include/Result.h" />
 		<Unit filename="include/Search.h" />
 		<Unit filename="include/User.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="src/PageRank.cpp" />
 		<Unit filename="src/Result.cpp" />
 		<Unit filename="src/Search.cpp" />
 		<Unit filename="src/User.cpp" />
